<resources>
    <string name="app_name">CyberSecAuthMobile</string>
    <string name="navigation_view_header_title">CyberSec Authentication Client</string>

    <string name="start_registration_heading">Enter username</string>
    <string name="start_registration_username_already_exist">Username already exist, try another one</string>

    <string name="registration_submit_totp_secret_heading">Submit TOTP secret</string>
    <string name="registration_submit_totp_secret_content">By pressing next we will create a TOTP secret and will submit it to the backend.</string>

    <string name="registration_generate_rsa_heading">Generate RSA KeyPair</string>
    <string name="registration_generate_rsa_content_1">By pressing the button below, we will generate an RSA key pair for you.</string>
    <string name="registration_generate_rsa_content_2">Later it will be used to verify your digital signature for authentication.</string>
    <string name="registration_generate_rsa_button_generate">Generate it!</string>

    <string name="registration_prefauth_heading">Choose a preferred Authentication method</string>
    <string name="registration_prefauth_body">In order to finish your registration, please choose a preferred mode for authentication.</string>

    <string name="login_totp_fragment_heading">Submit TOTP token</string>
    <string name="login_totp_fragment_body">The token below is generated with the your secret. Submit it to authenticate.</string>
    <string name="login_totp_code">Currently generated TOTP Token is %s</string>
    <string name="login_totp_fragment_totp_token_invalid_warning">Invalid TOTP token submitted to the server.</string>

    <string name="login_rsa_fragment_heading">Authenticate with RSA signature</string>
    <string name="login_rsa_fragment_body">The challenge below is received from the server. Tap on next, authenticate and the challenge will be signed.</string>
    <string name="login_rsa_fragment_challenge">The challenge is %s</string>
    <string name="login_rsa_fragment_rsa_signature_invalid_warning">Invalid challenge signature</string>

    <string name="authenticated_heading">Authenticated</string>
    <string name="authenticated_body">You are successfully authenticated, please choose from the options below</string>

    <string name="button_text_next">Next</string>
    <string name="button_text_refresh">Refresh</string>
    <string name="button_text_submit">Submit</string>
    <string name="button_text_finish">Finish</string>
    <string name="button_text_update">Update</string>
    <string name="button_text_logout">Logout</string>
    <string name="button_text_delete">Delete</string>

    <string name="generic_username">Hello %s</string>
    <string name="generic_jwt">Your JWT is %s</string>
    <string name="generic_totpSecret">Your TOTP secret is %s</string>
    <string name="generic_preferredAuthType">Your preferred authentication type is %s</string>

    <string name="dialog_network_error_title">Network Error</string>
    <string name="dialog_network_error_text">Ooops, please try again later.</string>
    <string name="dialog_button_ok">OK</string>

    <string name="biometric_prompt_title">Please authenticate yourself</string>
    <string name="biometric_prompt_subtitle">"Authenticate yourself with biometric credentials stored on your device."</string>
    <string name="biometric_prompt_negative_text">How about no?</string>

</resources>